|#1111| +Jagat| Refactoring fixed table columns. Preventing stretch scroll on mac chrome.

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -78,6 +78,10 @@
   }
 }
 
+.rnr-body {
+  overflow: scroll;
+}
+
 /* TODO: Split into separate screen */
 /* RnR Template config */
 .rnr-template-head {
